objects/nFORCE__Route__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__App__c</fullName>
        <description>This field is manually populated. It is required. This field is a unique identifier for the route, and is used, in conjunction with a group&apos;s app, to uniquely identify a requested app.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>App</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Body_Type__c</fullName>
        <description>The technology which the body content uses.</description>
        <inlineHelpText>The technology which the body content uses.</inlineHelpText>
        <label>Body Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lightning Aura Component</fullName>
                </value>
                <value>
                    <fullName>Lightning Web Component</fullName>
                </value>
                <value>
                    <fullName>Visualforce Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Body__c</fullName>
        <description>This field is required. The admin manually populates this field. This field controls what and how data is displayed in the route. If a screen is being used, a layout type must be set. Otherwise, specific values can be set for Visualforce pages in the system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>The user populates this text field to inform other users about what the route does and how the system uses the route. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description of what this route does and how the system uses this route.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Group__c</fullName>
        <description>--DEPRECATED--

            Moved to Group__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Icon_Class__c</fullName>
        <description>This field is optional. The admin manually populates this field. It controls the icon that displays beside the name of a route on the secondary navigation menu. It is not used for tertiary routes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED--

            Moved to Route_Group__c.Is_Hidden__c.</description>
        <label>-D Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Navigation__c</fullName>
        <description>This field is required. The admin manually populates this field or it is automatically set via Install Updates. It is the secondary navigation page name for a route.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Navigation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Order__c</fullName>
        <description>--DEPRECATED--

            Moved to Route_Group__c.Order__c.</description>
        <label>-D Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parameters__c</fullName>
        <description>This field is manually populated. It is optional. A semicolon-separated set of key=value pairs passed as URL parameters to the content of this route.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A semicolon-separated set of key=value pairs passed as URL parameters to the content of this route.</inlineHelpText>
        <label>Parameters</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_App__c</fullName>
        <description>--DEPRECATED--

            Moved to Route_Group__c.Parent_Route__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Parent App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is manually populated. It is optional. This field looks up to the screen, which is typically used to determine what fields to display, and the view state (read only or editable) to display them in.</description>
        <inlineHelpText>The Screen used to render the content of this route.</inlineHelpText>
        <label>Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Routes</relationshipLabel>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Sub_Navigation__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to determine which subnavigation bar to use for a given route.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Navigation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Taxonomy_Id__c</fullName>
        <description>The system automatically populates this required string field with an identifier for the part of the nCino product taxonomy a route belongs to. By default, the value for a route and its clones is the standard app name of the route.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Taxonomy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Toolbar__c</fullName>
        <description>--DEPRECATED--</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Toolbar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Topbar__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to determine which topbar to use for a given route.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The page include for the top bar region of the base UI template.</inlineHelpText>
        <label>Topbar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Portal_Header_Text__c</fullName>
        <description>A special header field which differs from the internal representation of the Route for use in Customer Portal when displaying a Route to external users.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This value is displayed in Customer Portal for Routes which are used for dynamic UI generation, such as a page on an Online Application, and varies from header text which might appear internally.</inlineHelpText>
        <label>Portal Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Portal_Icon_Path__c</fullName>
        <description>The path to the SLDS Icon (Custom, Standard, or Utility) that appears at the top of a form in a route during the application process in Customer Portal.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the path to an SLDS Icon (Custom, Standard, or Utility) starting after &apos;...icons/&apos;. For example, the account standard icon path would be &apos;standard-sprite/svg/symbols.svg#account&apos;.</inlineHelpText>
        <label>Portal Icon Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Portal_Subheader_Text__c</fullName>
        <description>Subheader text that appears beneath the external header for a route in Customer Portal when displaying a Route to external users.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a textual description of this route which will be displayed beneath the external header message to users in Customer Portal.</inlineHelpText>
        <label>Portal Subheader Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nPortal__Search_Object_Filter__c</fullName>
        <description>Manually populate this field with a Where clause to filter inappropriate search results.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter an optional Where clause to filter the results of the search on this sObject. An example on the Account object would be &quot;Type != &apos;Individual&apos;&quot;.</inlineHelpText>
        <label>OA Search Object Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Search_Object_Type__c</fullName>
        <description>This field defines the sObject type from which search results originate.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OA Search Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Search_Results_Fieldset__c</fullName>
        <description>Enter the name of the field set that controls the type of information displayed for each search results. There are two packaged field sets, both on the Account object, for this purpose. These field sets populate on the Business Search route by default.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field set that controls the information displayed in search results.</inlineHelpText>
        <label>OA Search Results Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Search_Select_Active_Text__c</fullName>
        <description>This field determines the text that displays on the button the user clicks if they want to continue their application with the business that has populated in the search results. This button is only visible if the user has already selected the business but clicks away to view different results or add a different business, then cancels that action.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OA Search Select Active Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Search_Select_Text__c</fullName>
        <description>This field determines the text that displays on the button the user clicks to indicate that they want to apply with a business that has populated in the search results.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OA Search Select Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <columns>nFORCE__Group__c</columns>
        <columns>NAME</columns>
        <columns>nFORCE__App__c</columns>
        <columns>nFORCE__Order__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>nFORCE__Toolbar__c</columns>
        <columns>nFORCE__Body__c</columns>
        <columns>nFORCE__Icon_Class__c</columns>
        <columns>nFORCE__Is_Hidden__c</columns>
        <columns>nFORCE__Parent_App__c</columns>
        <columns>nFORCE__Navigation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>nFORCE__All1</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__App__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>nFORCE__Body__c</columns>
        <columns>nFORCE__Body_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>